--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         // !!! 重要 !!!
         // 請將這裡的 URL 換成你從 Vercel 拿到的後端網址
-        const BACKEND_API_URL = "https://yt-to-mp3-seven.vercel.app"; // 例如: https://yt-to-mp3-abcd.vercel.app
+        const BACKEND_API_URL = "https://yt-to-mp3-backend.vercel.app"; // 例如: https://yt-to-mp3-abcd.vercel.app
 
         convertBtn.addEventListener('click', async () => {
             const url = urlInput.value.trim();
@@ -134,5 +134,6 @@
 
 </body>
 </html>
+
 
 
